[gd_scene load_steps=8 format=3 uid="uid://niuw1fap4576"]

[ext_resource type="Script" uid="uid://bbd7mmi8k1x5y" path="res://src/Main.gd" id="1"]
[ext_resource type="Script" uid="uid://bqf4gox855lt8" path="res://src/map/MapSystem.gd" id="2"]
[ext_resource type="Script" uid="uid://cteq5afk01u16" path="res://src/markers/MarkerSystem.gd" id="3"]
[ext_resource type="Script" uid="uid://djvdn3qepvyd0" path="res://src/fog-of-war/FogOfWarSystem.gd" id="4"]
[ext_resource type="Script" uid="uid://cdh1xwkoaomd0" path="res://src/biomes/BiomeSystem.gd" id="5"]
[ext_resource type="Script" uid="uid://bp3qsobkq5gkn" path="res://src/barriers/BarrierSystem.gd" id="6"]
[ext_resource type="Script" uid="uid://ds1pqwli2cebb" path="res://src/saves/SaveSystem.gd" id="7"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="MapSystem" type="Node2D" parent="."]
script = ExtResource("2")

[node name="MarkerSystem" type="Node2D" parent="."]
script = ExtResource("3")

[node name="FogOfWarSystem" type="Node2D" parent="."]
script = ExtResource("4")

[node name="BiomeSystem" type="Node2D" parent="."]
script = ExtResource("5")

[node name="BarrierSystem" type="Node2D" parent="."]
script = ExtResource("6")

[node name="SaveSystem" type="Node" parent="."]
script = ExtResource("7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DebugPanel" type="VBoxContainer" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -10.0

[node name="StatusLabel" type="Label" parent="UI/DebugPanel"]
layout_mode = 2
text = "DWES Status: Initializing..."

[node name="PlayersLabel" type="Label" parent="UI/DebugPanel"]
layout_mode = 2
text = "Players: 0"

[node name="NetworkLabel" type="Label" parent="UI/DebugPanel"]
layout_mode = 2
text = "Network: Offline"

[node name="Controls" type="VBoxContainer" parent="UI/DebugPanel"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/DebugPanel/Controls"]
layout_mode = 2
text = "Start Host"

[node name="JoinButton" type="Button" parent="UI/DebugPanel/Controls"]
layout_mode = 2
text = "Join Server"

[node name="BiomeToggle" type="CheckBox" parent="UI/DebugPanel/Controls"]
layout_mode = 2
button_pressed = true
text = "Show Biomes"

[node name="BarrierToggle" type="CheckBox" parent="UI/DebugPanel/Controls"]
layout_mode = 2
button_pressed = true
text = "Show Barriers"
